--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9">
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="theme-color" content="#ffffff">
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js'
+import { getAnalytics } from 'https://www.gstatic.com/firebasejs/9.6.6/firebase-analytics.js'
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+      apiKey: 'AIzaSyBRB4cOo9a-2FJmsE8f0TsEOZtbwwIqF7o',
+      authDomain: 'jparker-5a85b.firebaseapp.com',
+      databaseURL: 'https://jparker-5a85b-default-rtdb.firebaseio.com',
+      projectId: 'jparker-5a85b',
+      storageBucket: 'jparker-5a85b.appspot.com',
+      messagingSenderId: '471957182601',
+      appId: '1:471957182601:web:98762bdcf91905b8104e58',
+      measurementId: 'G-4SBNPR22MR',
+    }
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig)
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
+const analytics = getAnalytics(app)
+  </script>
   <script>
     (function() {
       const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
